--- a/ADMFacturar/Views/Inventario/AgregarInventario.cshtml
+++ b/ADMFacturar/Views/Inventario/AgregarInventario.cshtml
@@ -3,6 +3,7 @@
 @{
     var articulos = ViewData["Articulos"] as List<ArticuloViewModel>;
     var proveedores = ViewData["Proveedores"] as List<Proveedor>;
+    var articulosModal = ViewData["ArticulosModal"] as List<ArticuloViewModel>;
 }
 
 <!DOCTYPE html>
@@ -115,12 +116,20 @@
     <div class="w-full mt-8">
         <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
             <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Articulos</h3>
-            <div>
+            @*       <div>
+            <form id="guardarForm" method="post" asp-action="GuardarIngresoMercaderia">
+            <input type="hidden" name="PK" id="hiddenPK" />
+            <button type="submit" id="btnGuardar" class="rounded-md bg-green-600 px-4 py-1.5 font-bold text-white shadow-sm hover:bg-green-500 focus:ring-2 focus:ring-indigo-500">Guardar</button>
+            </form>
+            <a href="@Url.Action("Index", "Inventario")" class="rounded-md bg-red-600 px-4 py-1.5 font-bold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-indigo-500 inline-block mt-4">Salir</a>
+
+            </div> *@
+            <div class="flex items-center space-x-2">
                 <form id="guardarForm" method="post" asp-action="GuardarIngresoMercaderia">
                     <input type="hidden" name="PK" id="hiddenPK" />
                     <button type="submit" id="btnGuardar" class="rounded-md bg-green-600 px-4 py-1.5 font-bold text-white shadow-sm hover:bg-green-500 focus:ring-2 focus:ring-indigo-500">Guardar</button>
                 </form>
-
+                <a href="@Url.Action("Index", "Inventario")" class="rounded-md bg-red-600 px-4 py-1.5 font-bold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-indigo-500">Salir</a>
             </div>
         </div>
     </div>
@@ -149,11 +158,22 @@
                             <td class="py-3 text-center">@articulo.Precio</td>
                             <td class="py-3 text-center">
                                 <div class="flex justify-center space-x-2">
-                                    <a asp-action="AgregarInventario" class="text-blue-600 hover:text-blue-900" title="Editar">
-                                        <i class="fas fa-edit"></i>
-                                    </a>
-                                    <form method="post" asp-action="AgregarInventario" onsubmit="return confirm('¿Está seguro que desea desactivar este cliente?');">
-                                        <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
+
+                                    @*           <form method="post" asp-action="AgregarInventario">
+                            <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Eliminar">
+                            <i class="fas fa-trash"></i>
+                            </button>
+                            </form>
+                            *@
+                                    @*    <form method="post" asp-action="EliminarArticulo" asp-route-PK_FK_Documento="@Model.PK_FK_Documento" asp-route-PK_Articulo="@articulo.PK_Articulo" class="eliminar-form">
+                            <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Eliminar">
+                            <i class="fas fa-trash"></i>
+                            </button>
+                            </form> *@
+                                    <form method="post" asp-action="EliminarArticulo" class="eliminar-form">
+                                        <input type="hidden" name="PK_FK_Documento" id="pkDocumentoEliminar" value="">
+                                        <input type="hidden" name="PK_Articulo" value="@articulo.PK_Articulo">
+                                        <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Eliminar">
                                             <i class="fas fa-trash"></i>
                                         </button>
                                     </form>
@@ -166,63 +186,126 @@
             </tbody>
         </table>
     </div>
+    
 
+    <!--                  Inicio Modal                       -->
 
-    <!-- Modal -->
-    <div id="modal" class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden">
-        <div class="bg-white rounded-lg p-6 w-full max-w-md">
-            <div class="mb-4">
-                <h3 class="text-lg font-bold">Buscar Artículo</h3>
-            </div>
-            <div class="mb-4">
-                <label for="search" class="block text-sm font-medium">Código o Descripción</label>
-                <input type="text" id="search" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+    <div id="modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center hidden">
+        <div class="bg-gray-900 text-white rounded-lg p-6 w-full max-w-md shadow-xl">
+            <div class="mb-6">
+                <h3 class="text-xl font-bold mb-4">Buscar Artículo</h3>
+                <div class="relative">
+                    <input type="text" id="buscarArticulo" class="block w-full rounded-md py-2 px-3 bg-white text-gray-900 placeholder-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6" placeholder="Buscar por código o descripción">
+                </div>
             </div>
             <div class="overflow-x-auto">
-                <table class="min-w-full leading-normal">
-                    <thead>
-                        <tr class="bg-gray-800 text-white">
-                            <th class="text-center py-3">Código</th>
-                            <th class="text-center py-3">Descripción</th>
-                        </tr>
-                    </thead>
-                    <tbody class="text-gray-700">
-                        <!-- Aquí irán las filas de artículos -->
-                        <tr class="border-b border-gray-200 hover:bg-gray-100">
-                            <td class="py-3 text-center">001</td>
-                            <td class="py-3 text-center">Artículo A</td>
-                        </tr>
-                        <tr class="border-b border-gray-200 hover:bg-gray-100">
-                            <td class="py-3 text-center">002</td>
-                            <td class="py-3 text-center">Artículo B</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
+                    <table class="min-w-full leading-normal" id="tablaArticulosModal">
+                        <thead>
+                            <tr class="bg-gray-800 text-white">
+                                <th class="text-center py-3 px-4">Código</th>
+                                <th class="text-center py-3 px-4">Descripción</th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-gray-700">
+                            <!-- Filas de artículos generadas dinámicamente por JavaScript -->
+                        </tbody>
+                    </table>
+                </div>
             </div>
             <div class="mt-6 flex justify-end">
                 <button type="button" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded" onclick="closeModal()">Cerrar</button>
             </div>
         </div>
     </div>
-    <!-- Fin Modal -->
+
+
+    <!--                  Fin Modal                       -->
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+
     <script>
-        document.getElementById('guardarForm').addEventListener('submit', function (event) {
-            // Obtiene el valor de PK_FK_Documento
-            var proveedor = document.querySelector('[name="PK_FK_Documento"]').value;
-            // Asigna el valor al campo oculto
-            document.getElementById('hiddenPK').value = proveedor;
-        });
+
 
         function openModal() {
-            document.getElementById('modal').classList.remove('hidden');
+            fetch('/Inventario/ListarArticulos')
+                .then(response => response.json())
+                .then(data => {
+                    console.log('Datos recibidos del API:', data);
+
+                    // Filtrar por búsqueda
+                    const buscar = document.getElementById('buscarArticulo').value.toLowerCase();
+                    const filteredData = data.filter(articulo =>
+                        articulo.pK_Articulo.toLowerCase().includes(buscar) || articulo.descripcion.toLowerCase().includes(buscar)
+                    );
+
+                    // Limpiar la tabla actual
+                    var tableBody = document.querySelector('#tablaArticulosModal tbody');
+                    tableBody.innerHTML = '';
+
+                    // Iterar sobre los artículos filtrados y agregar filas a la tabla
+                    filteredData.forEach(articulo => {
+                        console.log('Artículo:', articulo);
+
+                        var row = `
+                                        <tr class="border-b border-gray-200 hover:bg-gray-100" cursor-pointer" onclick="seleccionarArticulo('${articulo.pK_Articulo}', '${articulo.descripcion}')">
+                                        <td class="py-3 text-center">${articulo.pK_Articulo}</td>
+                                        <td class="py-3 text-center">${articulo.descripcion}</td>
+                                    </tr>
+                                `;
+                        tableBody.innerHTML += row;
+                    });
+
+                    // Mostrar la modal
+                    document.getElementById('modal').classList.remove('hidden');
+                })
+                .catch(error => {
+                    console.error('Error al obtener los artículos:', error);
+                });
         }
 
         function closeModal() {
             document.getElementById('modal').classList.add('hidden');
         }
+
+        function seleccionarArticulo(codigo, descripcion) {
+            // Asignar el código del artículo al campo PK_FK_Articulo
+            document.getElementById('PK_FK_Articulo').value = codigo;
+            // Cerrar la modal después de seleccionar el artículo
+            closeModal();
+        }
+
+        // Función para filtrar los artículos al escribir en el campo de búsqueda
+        document.getElementById('buscarArticulo').addEventListener('input', function () {
+            openModal(); // Volver a cargar la modal con los resultados filtrados al cambiar el texto de búsqueda
+        });
+        function closeModal() {
+            // Oculta la modal
+            document.getElementById('modal').classList.add('hidden');
+        }
+
+        function seleccionarArticulo(codigo, descripcion) {
+            // Asigna el código del artículo al campo PK_FK_Articulo
+            document.getElementById('PK_FK_Articulo').value = codigo;
+            // Cierra la modal al seleccionar un artículo
+            closeModal();
+        }
+
+        // Función para filtrar los artículos al escribir en el campo de búsqueda
+        document.getElementById('buscarArticulo').addEventListener('input', function () {
+            openModal(); // Volver a cargar la modal con los resultados filtrados al cambiar el texto de búsqueda
+        });
+
+        //  <!--Fin Modal-- >
+
+
+
 
         document.getElementById('btnGuardar').addEventListener('click', function (event) {
             event.preventDefault(); // Detener el envío normal del formulario
@@ -265,11 +348,11 @@
                 } else {
                     // Crear objeto FormData con los datos del formulario
                     var formData = new FormData();
-                    formData.append('PK', pkDocumento); // Agregar la PK del documento
+                    formData.append('PK', documento); // Agregar la PK del documento
 
 
 
-                    // Enviar los datos al servidor utilizando fetch
+                    // Enviar los datos al controlador utilizando fetch
                     fetch('/Inventario/GuardarIngresoMercaderia', {
                         method: 'POST',
                         body: formData
@@ -305,6 +388,80 @@
                 }
             }
         });
+
+        //   <!--Fin Validacion al guardar-- >
+
+
+        //   <!--Inicio Validacion boton eliminar-- >
+
+
+        document.querySelectorAll('.eliminar-form').forEach(function (form) {
+            form.addEventListener('submit', function (event) {
+                event.preventDefault(); // Detener el envío normal del formulario
+
+                // Obtener la PK del documento y del artículo desde el formulario
+                var pkDocumento = document.getElementById('PK_FK_Documento').value;
+                var pkArticulo = this.querySelector('input[name="PK_Articulo"]').value;
+
+                document.getElementById('pkDocumentoEliminar').value = pkDocumento;
+
+                // Mostrar mensaje de confirmación con SweetAlert2
+                Swal.fire({
+                    title: '¿Está seguro?',
+                    text: "No podrá revertir esto",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Sí, eliminar',
+                    cancelButtonText: 'Cancelar'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        // Crear objeto FormData con los datos del formulario
+                        var formData = new FormData();
+                        formData.append('PK_FK_Documento', pkDocumento);
+                        formData.append('PK_Articulo', pkArticulo);
+
+                        // Enviar los datos al controlador utilizando fetch
+                        fetch(`/Inventario/EliminarArticulo?PK_FK_Documento=${pkDocumento}&PK_Articulo=${pkArticulo}`, {
+                            method: 'POST',
+                            body: formData
+                        })
+                            .then(response => {
+                                if (response.ok) {
+                                    // Mostrar mensaje de éxito con SweetAlert2
+                                    Swal.fire({
+                                        icon: 'success',
+                                        title: 'Artículo eliminado correctamente',
+                                        showConfirmButton: true,
+                                        confirmButtonColor: '#3085d6',
+                                        confirmButtonText: 'OK'
+                                    }).then((result) => {
+                                        // Recargar la página después de eliminar
+                                        location.reload();
+                                    });
+                                } else {
+                                    throw new Error('Error al eliminar el artículo');
+                                }
+                            })
+                            .catch(error => {
+                                // Mostrar mensaje de error con SweetAlert2
+                                Swal.fire({
+                                    icon: 'error',
+                                    title: 'Error',
+                                    text: error.message,
+                                    confirmButtonColor: '#3085d6',
+                                    cancelButtonColor: '#d33',
+                                    confirmButtonText: 'OK'
+                                });
+                            });
+                    }
+                });
+            });
+        });
+
+
+        //   <!--Fin Validacion boton eliminar-- >
     </script>
 </body>
 </html>
