--- a/ADMFacturar/Views/Clientes/Index.cshtml
+++ b/ADMFacturar/Views/Clientes/Index.cshtml
@@ -131,3 +131,111 @@
 	}
 
 </script>
+
+
+<!--                  Modal de Crear Template                        -->
+<div id="modalCrearCliente" class="modal">
+	<div class="modal-content">
+		<form>
+			<div class="border-b border-gray-900/10 pb-12">
+				<h2 class="text-base font-semibold leading-7 text-white">Creacion de nuevo cliente</h2>
+				<div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+
+					<div class="sm:col-span-2">
+						<label for="provider" class="block text-sm font-medium leading-6 text-white">Tipo de Identificacion</label>
+						<div class="mt-2">
+							<select id="provider" name="provider" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+								<option value="">Fisico</option>
+								<option value="">Juridico</option>
+							</select>
+						</div>
+					</div>
+
+
+					<div class="sm:col-span-2 ">
+						<label for="city" class="block text-sm font-medium leading-6 text-white">Numero de Identificacion</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+
+					<div class="sm:col-span-2">
+						<label for="region" class="block text-sm font-medium leading-6 text-white">Nombre</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="region" class="block text-sm font-medium leading-6 text-white">Apellidos</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="region" class="block text-sm font-medium leading-6 text-white">Telefono</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+
+					<div class="sm:col-span-2">
+						<label for="email" class="block text-sm font-medium leading-6 text-white">Correo</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="provider" class="block text-sm font-medium leading-6 text-white">Provincia</label>
+						<div class="mt-2">
+							<select id="provider" name="provider" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+								<option value="">San Jose</option>
+								<option value="">Alajuela</option>
+								<option value="">Cartago</option>
+								<option value="">Heredia</option>
+								<option value="">Puntarenas</option>
+								<option value="">Limon</option>
+								<option value="">Guanacaste</option>
+							</select>
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="region" class="block text-sm font-medium leading-6 text-white">Canton</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="region" class="block text-sm font-medium leading-6 text-white">Distrito</label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+					<div class="sm:col-span-2">
+						<label for="region" class="block text-sm font-medium leading-6 text-white">Barrio y otras senas </label>
+						<div class="mt-2">
+							<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						</div>
+					</div>
+					<fieldset>
+						<legend class="block text-sm font-medium leading-6 text-white">Estado</legend>
+						<div class="mt-3 flex items-center gap-x-2">
+							<div class="flex items-center gap-x-2 bg-blue-100 text-blue-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-blue-400 ">
+								<input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+								<label for="push-everything" class="block text-sm font-medium leading-6 text-gray-900">Activo</label>
+							</div>
+							<div class="flex items-center gap-x-2 bg-red-100 text-red-800 text-md font-medium px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-blue-400 border border-red-400">
+								<input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+								<label for="push-email" class="block text-sm font-medium leading-6 text-gray-900">Inactivo</label>
+							</div>
+						</div>
+					</fieldset>
+				</div>
+				<br />
+				<br />
+				<button type="submit" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+				<button class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
+			</div>
+		</form>
+	</div>
+</div>
+<!--                  Final Modal de Crear Tempalte                        -->
