--- a/ADMFacturar/Views/Transportes/Index.cshtml
+++ b/ADMFacturar/Views/Transportes/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@using ADM.Models
-@model IEnumerable<Transporte>
-<link href="~/css/custom.css" rel="stylesheet" />
+@model Transporte
+
+@{
+    var tranportes = ViewData["Transportes"] as List<Transporte>;
+}
+
 
 <div class="w-full">
 </div>
@@ -24,12 +28,16 @@
     <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
         <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Transportes</h3>
         <div>
-            <a asp-action="CrearTransporte" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Transporte</a>
+            @* <a asp-action="CrearTransporte" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Transporte</a> *@
+            <a onclick="abrirModal('modalCrearTransporte')" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Transporte</a>
        </div>
     </div>
 
 
     <!--                  Tabla                        -->
+    @* <div>
+        <button class="btn btnEditar" title="Editar Template" onclick="abrirModal('modalCrearTransporte')">Test modal<button/>
+    </div> *@
     <div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
         <table class="min-w-full leading-normal">
             <thead>
@@ -42,9 +50,9 @@
                 </tr>
             </thead>
             <tbody class="text-gray-700">
-                @if (Model != null && Model.Any())
+                @if (tranportes != null)
                 {
-                    @foreach (var item in Model)
+                    @foreach (var item in tranportes)
                     {
                         <tr class="border-b border-gray-200 hover:bg-gray-100">
                             <td class="py-3 text-center">@Html.DisplayFor(modelItem => item.PK_Medio_Transporte)</td>
@@ -63,6 +71,7 @@
                             <td>                            
                                 <div class="flex justify-center space-x-2">
                                     <div class="flex justify-center space-x-2">
+                                        
                                         <a asp-action="ActualizarTransporte" asp-route-PK="@item.PK_Medio_Transporte" class="text-blue-600 hover:text-blue-900" title="Editar">
                                             <i class="fas fa-edit"></i>
                                         </a>
@@ -70,7 +79,10 @@
                                             <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
                                                 <i class="fa-solid fa-ban"></i>
                                             </button>
+                                            <a onclick="abrirModal('modalActualizarTransporte')" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Transporte</a>
+
                                         </form>
+                                        
                                     </div>
                                 </div>
                                 
@@ -103,6 +115,81 @@
         </div>
     </div>
 </div>
+
+
+
+<!--                  Modal de Crear Template                        -->
+<div id="modalCrearTransporte" class="modal">
+    <div class="modal-content">
+        <form asp-action="CrearTransporte" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
+            <div class="border-b border-gray-700 pb-6">
+                <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Transporte</h2>
+            </div>
+            <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
+                <div>
+                    <label for="Descripcion" class="block text-sm font-medium text-gray-300">Descripción Transporte</label>
+                    <div class="mt-2">
+                        <input asp-for="Descripcion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+                    </div>
+                </div>
+                <div>
+                    <label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
+                    <div class="mt-2">
+                        <select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+                            <option value="true">Activo</option>
+                            <option value="false">Inactivo</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-6 flex justify-end gap-x-4">
+                <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
+                <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
+
+                <button type="submit" onclick="mostrarAlertaYRedireccion(event)" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+                <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
+            </div>
+        </form>
+    </div>
+</div>
+<!--                  Final Modal de Crear Tempalte                        -->
+
+<!--                  Modal de Actualizar Template                        -->
+<div id="modalActualizarTransporte" class="modal">
+    <div class="modal-content">
+        <form asp-action="ActualizarTransporte" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formupdate">
+            <div class="border-b border-gray-700 pb-6">
+                <h2 class="text-lg font-semibold leading-7 text-white">Actualizar Transporte</h2>
+            </div>
+            <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+                <div class="sm:col-span-2">
+                    <label for="Descripcion" class="block text-sm font-medium text-gray-300">Descripción Transporte</label>
+                    <div class="mt-2">
+                        <input asp-for="Descripcion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                    </div>
+                </div>
+                <div class="sm:col-span-2">
+                    <label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
+                    <div class="mt-2">
+                        <select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                            <option value="true">Activo</option>
+                            <option value="false">Inactivo</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-6 flex justify-end gap-x-4">
+                <input asp-for="PK_Medio_Transporte" value="" type="hidden" />
+                <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
+                <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
+                <button type="submit" onclick="mostrarAlertaYRedireccion(event)" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+                <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
+            </div>
+        </form>
+    </div>
+</div>
+<!--                  Final Modal de Actualizar Tempalte                        -->
+
 
 <script>
 
