--- a/ADMFacturar/Views/_ViewImports.cshtml
+++ b/ADMFacturar/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using ADMFacturar.Models
 @using ADM.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+<link href="~/css/custom.css" rel="stylesheet" />
